--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -69,96 +69,143 @@ jobs:
     outputs:
       new_version: ${{ steps.update-version.outputs.new_version }}
 
-  build-and-release:
-    needs: auto-version
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            artifact-name: laboratory1-linux
-            build-dir: build
-            exe-path: build/laboratory1
-          - os: windows-latest
-            artifact-name: laboratory1-windows
-            build-dir: build/Release
-            exe-path: build/Release/laboratory1.exe
-    runs-on: ${{ matrix.os }}
+  
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Clean build directory
+        run: |
+          if (Test-Path build) {
+            Remove-Item -Recurse -Force build
+          }
+      
+      - name: Configure CMake
+        run: cmake -S . -B build
+        
+      - name: Build with CMake
+        run: cmake --build build --config Release
 
+      - name: Create Windows release folder
+        run: |
+          mkdir windows-release
+          copy build\Release\laboratory2.exe windows-release\
+          copy ip_filter.tsv windows-release\
+          echo "Windows release folder created"
+
+      - name: List Windows release contents
+        run: dir windows-release\
+
+      - name: Upload Windows Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-release
+          path: windows-release/
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Clean build directory
+        run: rm -rf build
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake
+
+      - name: Configure CMake
+        run: cmake -S . -B build
+
+      - name: Build project
+        run: cmake --build build --config Release
+
+      - name: Create Linux release folder
+        run: |
+          mkdir linux-release
+          cp build/laboratory2 linux-release/
+          cp ip_filter.tsv linux-release/
+          chmod +x linux-release/laboratory2
+          echo "Linux release folder created"
+
+      - name: List Linux release contents
+        run: ls -la linux-release/
+
+      - name: Upload Linux Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-release
+          path: linux-release/
+
+  create-release:
+    needs: [build-windows, build-linux]  
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' 
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Setup CMake
-        uses: jwlawson/actions-setup-cmake@v2
+        
+      - name: Download Windows Artifacts
+        uses: actions/download-artifact@v4
         with:
-          cmake-version: '3.25.x'
+          name: windows-release
+          path: windows-release
 
-      - name: Configure CMake
-        run: cmake -B ${{ matrix.build-dir }} -DCMAKE_BUILD_TYPE=Release
+      - name: Download Linux Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-release
+          path: linux-release
 
-      - name: Build project
-        run: cmake --build ${{ matrix.build-dir }} --config Release
-      
-      - name: Find executable file
-        id: find-exe
+      - name: Debug - List downloaded files
         run: |
-          if ["${{matrix.os}}" == "windows-latest"]; then
-            EXE_PATH=$(find ${{ matrix.build-dir }} -name "*.exe" -type f | head -1)
-          else
-            EXE_PATH = $(find ${{matrix.build-dir }} -type f -executable | head -1)
-          fi
+          echo "Windows release contents:"
+          ls -la windows-release/
+          echo "Linux release contents:"
+          ls -la linux-release/
+
+      - name: Create release archives
+        run: |
+          # Создаем zip архив для Windows
+          cd windows-release
+          zip -r ../laboratory2-windows.zip .
+          cd ..
           
-          if [-z "$EXE_PATH"]; then
-            echo "File didn`t founded:"
-            find ${{matrix.build-dir}} -type f
-            exit 1
-          fi
+          # Создаем tar.gz архив для Linux
+          cd linux-release
+          tar -czf ../laboratory2-linux.tar.gz .
+          cd ..
+          
+          echo "Release archives created"
+          ls -la *.zip *.tar.gz
 
-          echo "Founded executable file: " $EXE_PATH
-          echo "exe_path=$EXE_PATH" >> $GITHUB_OUTPUT
-      - name: Upload executable only
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{matrix.artifact-name}}
-          path: ${{steps.find-exe.outputs.exe_path}}
-
-  create-release:
-    needs: 
-      - auto-version
-      - build-and-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Linux executable
-        uses: actions/download-artifact@v4
-        with:
-          name: laboratory1-linux
-          path: artifacts/
-
-
-      - name: Download Windows executable
-        uses: actions/download-artifact@v4
-        with:
-          name: laboratory1-windows
-          path: artifacts/
-
-      - name: list download files
-        run: ls -la artifacts/
-
-      - name: Create Release on GitHub
+      - name: Create Release and Upload Assets
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ needs.auto-version.outputs.new_version }}
-          name: Release v${{ needs.auto-version.outputs.new_version }}
-          body: |
-            Автоматический релиз версии ${{ needs.auto-version.outputs.new_version }}
-          
-            Содержит:
-              - Исполняемый файл для Linux
-              - Исполняемый файл для Windows (.exe)
-          files: artifacts/*
+          tag_name: v${{ github.run_number }}
+          name: Release v${{ github.run_number }} 
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-
+          files: |
+            windows-release/laboratory2.exe
+            linux-release/laboratory2
+            ip_filter.tsv
+          body: |
+            Laboratory 2 Release v${{ github.run_number }}
+            
+            Download files:
+            - laboratory2.exe (Windows executable)
+            - laboratory2 (Linux executable)
+            - ip_filter.tsv (data file - needed for both platforms)
+            
+            Usage:
+            Place ip_filter.tsv in the same folder as the executable
+            
+            Build Info:
+            - Build Number: ${{ github.run_number }}
+            - Commit: ${{ github.sha }}
