--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -110,7 +110,7 @@ jobs:
   create-release:
     needs: [build-windows, build-linux]  
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' 
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master' 
     
     steps:
       - name: Checkout code
